monitoring/prometheus-operator/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.internal.home.alan-jenkins.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: prometheus-operator-grafana
              servicePort: 80
