monitoring/prometheus-operator/grafana-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/target: home.alan-jenkins.com
spec:
  hosts:
    - 'grafana.internal'
  gateways:
    - istio-system/internal-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: prometheus-operator-grafana.monitoring.svc.cluster.local
