monitoring/prometheus-operator/prometheus-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/target: home.alan-jenkins.com
spec:
  hosts:
    - 'prometheus.internal.home.alan-jenkins.com'
  gateways:
    - istio-system/internal-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 9090
            host: z-prometheus.monitoring.svc.cluster.local
